Sun Mar  3 15:16:07 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktable.c: When increasing the row or column
	requisitions to make them sufficient for spanning widgets,
	favor rows or columns with expandable children in them.
	(#1261, Jonathan Blandford.)

Sun Mar  3 14:26:33 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.[ch] (_gtk_get_insertion_cursor_gc):
	Centralize lookup and caching of cursor GC's here.

	* gtk/gtkentry.[ch] gtk/gtktextview.[ch] gtk/gtktextdisplay.c
	gtk/gtklabel.c: Move to using _gtk_get_insertion_cursor_gc().

	* gtk/gtkentry.c (gtk_entry_expose): Draw cursors
	under the text, not over the text.

	* gtk/gtkwidget.c (gtk_widget_class_init): add
	a secondary-cursor-color property.

	* gtk/gtkwidget.c (gtk_widget_class_init): Decrease
	the default aspect ratio to 1/25 (0.04).
	
	* tests/testgtkrc (bell_duration): Comment out
	cursor color setting.
	
Sun Mar  3 20:48:12 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkmenu.c (gtk_menu_set_submenu_navigation_region): change
	offset of cursor corner of navigation region from (-2, 2) to 
	(-2, 0).

2002-03-03  jacob berkman  <jacob@ximian.com>

	* Makefile.am (EXTRA_DIST): add sanitize-la.sh

2002-03-03  Anders Carlsson  <andersca@gnu.org>

	* gdk/x11/gdkwindow-x11.c (gdk_window_move_resize): Fix tyop
	in docs.

Sat Mar  2 03:49:31 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): move edit
	ifs above _set_cursor code, don't collapse/expand row on double
	click, only activate (#63269)
	(validate_visible_area): add two missing lines (#73161, #73162)

Sun Mar  3 12:13:56 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix typo where pangoxft was being
	required instead of pangox. (Reported by Miles
	Lane)

Sun Mar  3 11:12:16 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (add_cursor): When in split cursor
	mode, always add the cursor as both strong and weak