@@ -22,7 +22,6 @@
 
 /* #undef HAVE_CATGETS */
 /* #undef HAVE_DIMM_H */
-/* #undef HAVE_DIRENT_H */
 #define HAVE_GETTEXT 1
 /* #undef HAVE_IPC_H */
 /* #undef HAVE_LC_MESSAGES */
@@ -42,6 +41,8 @@
 #define HAVE_WINTAB 1
 /* #undef HAVE_XCONVERTCASE */
 /* #undef HAVE_XFT */
+
+/* #undef HAVE_SIGSETJMP */
 
 #define NO_FD_SET 1
 
@@ -93,6 +94,9 @@
 /* Define if using `alloca.c'. */
 /* #undef C_ALLOCA */
 
+/* always defined to indicate that i18n is enabled */
+#define ENABLE_NLS 1
+
 /* Define if you have `alloca', as a function or macro. */
 #define HAVE_ALLOCA 1
 
@@ -111,12 +115,6 @@
 /* Define if you have the `dcgettext' function. */
 #define HAVE_DCGETTEXT 1
 
-/* Define if you have the <dimm.h> header file. */
-/* #undef HAVE_DIMM_H */
-
-/* Define if you have the <dirent.h> header file, and it defines `DIR'. */
-/* #undef HAVE_DIRENT_H */
-
 /* Define if you have the <dlfcn.h> header file. */
 /* #undef HAVE_DLFCN_H */
 
@@ -132,6 +130,9 @@
 
 /* Define if you have the `getresuid' function. */
 /* #undef HAVE_GETRESUID */
+
+/* Define if the GNU gettext() function is already present or preinstalled. */
+#define HAVE_GETTEXT 1
 
 /* Define if you have the <inttypes.h> header file. */
 /* #undef HAVE_INTTYPES_H */
@@ -163,9 +164,6 @@
 /* Define if you have the `munmap' function. */
 /* #undef HAVE_MUNMAP */
 
-/* Define if you have the <ndir.h> header file, and it defines `DIR'. */
-/* #undef HAVE_NDIR_H */
-
 /* Define if you have the <nl_types.h> header file. */
 /* #undef HAVE_NL_TYPES_H */
 
@@ -180,9 +178,6 @@
 
 /* Define if you have the `setlocale' function. */
 #define HAVE_SETLOCALE 1
-
-/* Define if you have the `sigsetjmp' function. */
-/* #undef HAVE_SIGSETJMP */
 
 /* Define if you have the <stdint.h> header file. */
 #ifndef _MSC_VER
@@ -212,12 +207,6 @@
 
 /* Define if you have the <string.h> header file. */
 #define HAVE_STRING_H 1
-
-/* Define if you have the <sys/dir.h> header file, and it defines `DIR'. */
-/* #undef HAVE_SYS_DIR_H */
-
-/* Define if you have the <sys/ndir.h> header file, and it defines `DIR'. */
-/* #undef HAVE_SYS_NDIR_H */
 
 /* Define if you have the <sys/param.h> header file. */
 /* #undef HAVE_SYS_PARAM_H */
@@ -276,6 +265,9 @@
 
 /* Define if you have the ANSI C header files. */
 #define STDC_HEADERS 1
+
+/* Define if the X Window System is missing or not being used. */
+/* #undef X_DISPLAY_MISSING */
 
 /* Define to empty if `const' does not conform to ANSI C. */
 /* #undef const */
